zero-schema-derive/tests/ui/fail/07_zero_variant_tagged.rs
use zero_schema_derive::ZeroSchema; #[derive(ZeroSchema)] #[zero(tag=Tag)] enum Empty {} fn main() {}
